add target content script

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,13 @@
         "32": "images/icon-32.png",
         "48": "images/icon-48.png",
         "128": "images/icon-128.png"
-    }
+    },
+    "content_scripts": [
+        {
+            "js": ["scripts/target_reviews.js"],
+            "matches": [
+                "https://www.target.com/p/*"
+            ]
+        }
+    ]
 }
