edit to run only on push to main branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: Deploy to Cloud Run from Source
 
 on:
   push:
+    branches:
+      - main
     paths:
       - backend/**
       - .github/workflows/main.yml
