--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "devDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@types/chrome": "^0.0.181",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
