--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^4.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
