add matching paths for ebayReviews.js

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -15,7 +15,11 @@
   "content_scripts": [
     {
       "js": ["ebayReviews.js"],
-      "matches": ["https://www.ebay.com/*"]
+      "matches": [
+        "https://www.ebay.com/itm/*",
+        "https://www.ebay.com/p/*",
+        "https://www.ebay.com/urw/*"
+      ]
     }
   ],
   "action": {
